2000-06-13  Hirokazu FUKUI  <hfukui@sannet.ne.jp>

	* lisp/gnus-bbdb.el(gnus-bbdb/update-record): Fix to fetch last
	mail field.

2000-06-09  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus.el (gnus-news-group-p): Sync with Gnus.
	(gnus-select-method): Remove "*" from doc string.

2000-06-08  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/message.el (message-fix-before-sending): Expose all
	invisible text with the property `message-invisible'; don't expose
	invisible X-Face fields; widen at first.
	(message-invisible-region): New function, substitute for
	`invisible-region'.
	(message-send): Call `message-fix-before-sending' after evaluating
	`message-send-hook'.
	(message-check-ignore-invisible-x-face-field): Remove.  You can use
	(add-hook 'message-send-hook 'x-face-xmas-remove-x-face-glyph)
	instead.

2000-06-06  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/message.el (message-save-drafts): Rewrite.

2000-06-06  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 03.

	* lisp/message.el (message-fix-before-sending): Don't check for
	invisible X-Face fields if
	`message-check-ignore-invisible-x-face-field' is non-nil.
	(message-send): Call `message-fix-before-sending' before encoding.
	(message-check-ignore-invisible-x-face-field): New user option.

2000-06-01  KANEMATSU Daiji <kanematu@sra.co.jp>

	* texi/gnus-ja.texi (gnus-summary-hide-all-threads): Fix typo.

2000-05-28  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* nnshimbun.el (nnshimbun-request-article-1): Fix to insert x-face
	unless SERVER.
	(nnshimbun-asahi-get-headers): Fix for subjects which contain ^M.

2000-05-26  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* lisp/nnshimbun.el (nnshimbun-write-nov): New function.
	(nnshimbun-close-group): Call nnshimbun-write-nov.
	(nnshimbun-generate-nov-database): Ditto.
	(nnshimbun-generate-nov-for-each-group): Fix bug which occur new
	entries add NOV database.